crates/formatter/tests/snapshots/snapshots__coder__migrations__000377_add_api_key_scope_wildcards.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- No-op: enum values remain to avoid churn. Removing enum values requires
-- doing a create/cast/drop cycle which is intentionally omitted here.
