crates/formatter/tests/snapshots/snapshots__coder__migrations__000378_add_tasks_rbac.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Revert Tasks RBAC.
-- No-op: enum values remain to avoid churn. Removing enum values requires
-- doing a create/cast/drop cycle which is intentionally omitted here.
