crates/formatter/tests/snapshots/snapshots__coder__migrations__000380_task_name_unique.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop index if exists tasks_owner_id_name_unique_idx;
