crates/formatter/tests/snapshots/snapshots__coder__migrations__000385_aibridge_fks.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- We didn't add an FK as a premature optimization when the aibridge tables were
-- added, but for the initiator_id it's pretty annoying not having a strong
-- reference.
--
-- Since the aibridge feature is still in early access, we're going to add the
-- FK and drop any rows that violate it (which should be none). This isn't a
-- very efficient migration, but since the feature is behind an experimental
-- flag, it shouldn't have any impact on deployments that aren't using the
-- feature.

-- Step 1: Add FK without validating it
alter table aibridge_interceptions
	add constraint aibridge_interceptions_initiator_id_fkey
		foreign key (initiator_id) references users (id)
		-- We can't:
		-- - Cascade delete because this is an auditing feature, and it also
		--   wouldn't delete related aibridge rows since we don't FK them.
		-- - Set null because you can't correlate to the original user ID if the
		--   user somehow gets deleted.
		--
		-- So we just use the default and don't do anything. This will result in a
		-- deferred constraint violation error when the user is deleted.
		--
		-- In Coder, we don't delete user rows ever, so this should never happen
		-- unless an admin manually deletes a user with SQL.
		on delete no action
		-- Delay validation of existing data until after we've dropped rows that
		-- violate the FK.
		not valid;

-- Step 2: Drop existing interceptions that violate the FK.
delete from aibridge_interceptions
where initiator_id not in (select id from users);

-- Step 3: Drop existing rows from other tables that no longer have a valid
--         interception in the database.
delete from aibridge_token_usages
where interception_id not in (select id from aibridge_interceptions);

delete from aibridge_user_prompts
where interception_id not in (select id from aibridge_interceptions);

delete from aibridge_tool_usages
where interception_id not in (select id from aibridge_interceptions);

-- Step 4: Validate the FK
alter table aibridge_interceptions
	validate constraint aibridge_interceptions_initiator_id_fkey;
