crates/formatter/tests/snapshots/snapshots__coder__migrations__000387_migrate_task_workspaces.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- No-op: This migration is not reversible as it transforms existing data into
-- a new schema. Rolling back would require deleting tasks and potentially
-- losing data.
