crates/formatter/tests/snapshots/snapshots__coder__migrations__000389_api_key_allow_list_constraint.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Drop all CHECK constraints added in the up migration
alter table api_keys drop constraint api_keys_allow_list_not_empty;
